# DependencyVisualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.dot  test_dependencies.dot  test_dependencies.sh
.github/: copilot-instructions.md
.github/prompts/: generate-diagram.prompt.md
build-test/: CMakeCache.txt  DependencyVisualizer  Makefile  cmake_install.cmake
include/: dependency_scanner.hpp  dot_generator.hpp  dotgen.hpp  graphviz.hpp  graphviz_runner.hpp  image_opener.hpp  parser.hpp  scanner.hpp
src/: DependencyScanner.cpp  DependencyScanner.hpp  DotGenerator.cpp  DotGenerator.hpp  GraphWriter.cpp  GraphWriter.hpp  GraphvizRunner.cpp  GraphvizRunner.hpp  OpenImage.cpp  OpenImage.hpp  PlatformOpener.cpp  PlatformOpener.hpp  dependency_scanner.cpp  dot_generator.cpp  dot_writer.cpp  dot_writer.hpp  dotgen.cpp  graphviz.cpp  graphviz_runner.cpp  graphviz_runner.hpp  image_opener.cpp  main.cpp  open_image.cpp  open_image.hpp  parser.cpp  scanner.cpp  scanner.hpp
